# phasta

./: CMakeLists.txt
phSolver/: CMakeLists.txt
phSolver/common/: asbnabi.f  e3metric.f  eblock.f  errorsmooth.f  hierarchic.f  local.f  localy.f  phasta.cc  solvecon.f
phSolver/compressible/: CMakeLists.txt  itrdrv.f  solgmr.f  solgmrpetsc.c
phSolver/incompressible/: asbflx.f  asbmfg.f  asigmr.f  asiq.f  asiqGradV.f  bflux.f  e3.f  e3b.f  e3bvar.f  e3dc.f  e3ivar.f  e3lhs.f  e3q.f  e3qGradV.f  e3qvar.f  e3stab.f  e3sts.f  elmStats.f  elmgmr.f  genlmass.f  getdiff.f  hello.f  hessian.f
