project(phSolver)
set(CMAKE_Fortran_MODULE_DIRECTORY ${phSolver_BINARY_DIR}/modules)
include_directories(${CMAKE_Fortran_MODULE_DIRECTORY})

option(PHASTA_USE_PETSC "Use PETSc GMRES Solver" ON)
if(PHASTA_USE_PETSC)
find_package(PETSC REQUIRED)
link_directories(${PETSC_LIBRARY_DIRS})
include_directories(${PETSC_INCLUDE_DIRS})
add_definitions(-DHAVE_PETSC)
option(IS_JEDS_BRANCH "Use Jed's Experimental PETSc Optimizations" OFF)
if(IS_JEDS_BRANCH)
	add_definitions(-DJEDBROWN)
endif()
endif(PHASTA_USE_PETSC)

add_subdirectory(common)
option(PHASTA_INCOMPRESSIBLE "Build the incompressible solver" OFF)
option(PHASTA_COMPRESSIBLE "Build the compressible solver" ON)
if(PHASTA_INCOMPRESSIBLE)
add_subdirectory(incompressible)
endif(PHASTA_INCOMPRESSIBLE)
if(PHASTA_COMPRESSIBLE)
add_subdirectory(compressible)
endif(PHASTA_COMPRESSIBLE)
